--- a/Main_M5_Walmart.ipynb
+++ b/Main_M5_Walmart.ipynb
@@ -67,6 +67,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### I tested earlier intensively with a validation set to get the best parameters."
+      ],
+      "metadata": {
+        "id": "84id1Lg17TPG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "params = {\n",
@@ -77,7 +86,7 @@
         "    'subsample': 0.5,\n",
         "    'subsample_freq': 1,\n",
         "    'learning_rate': 0.03,\n",
-        "    'num_leaves': 2**11 - 1,\n",
+        "    'num_leaves': 2**11 - 1, # We can afford a large number of leaves, due to data abundance\n",
         "    'min_data_in_leaf': 2**12 - 1,\n",
         "    'feature_fraction': 0.5,\n",
         "    'max_bin': 100,\n",
